fix: learn more not shifted properly

--- a/src/components/styles/Splash.scss
+++ b/src/components/styles/Splash.scss
@@ -10,7 +10,7 @@
   flex-direction: column;
 }
 
-#heading, .description {
+#heading, .description, .splash-link {
   margin-left: $main-margin-left;
 }
 
